# libretro_hello_world_core

./: CMakeLists.txt  README.md  build.bat
docs/: libretro_core.md  libretro_render.md  opengl.md  startup.md
src/: hello_world_core.c  lib.c
